--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Notre-Dame de Paris"
-baseURL = "https://example.com"
+baseURL = "https://techwizzard.netlify.app"
 languageCode = "en-us"
 theme = "ananke"
 
